--- a/aks-deployments/mqtt-grpc.yaml
+++ b/aks-deployments/mqtt-grpc.yaml
@@ -1,30 +1,30 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mm-my-device
+  name: mqtt-grpc
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mm-my-device
+      app: mqtt-grpc
   template:
     metadata:
       labels:
-        app: mm-my-device
+        app: mqtt-grpc
     spec:
       containers:
-      - name: mm-my-device
-        image: ghcr.io/iotmodels/memmon:x64
+      - name: mqtt-grpc
+        image: ghcr.io/iotmodels/mqtt-grpc-device:latest
         imagePullPolicy: Always
         env:
         - name: ConnectionStrings__cs
-          value: IdScope=0ne00890689;X509Key=certs/tls.crt|certs/tls.key
+          value: HostName=mosquitto.rido.dev;TcpPort=8884;X509Key=certs/tls.crt|certs/tls.key;CaFile=ca.pem
         volumeMounts:
           - name: my-device-x509
             mountPath: /app/certs
       volumes:
       - name: my-device-x509
         secret: 
-          secretName: my-device-cert
+          secretName: mqtt-grpc-device
       
         
