--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,61 +1,27 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/universal
 {
-	"name": "Kubernetes-in-Codespaces",
-	"dockerFile": "Dockerfile",
+	"name": "Default Linux Universal",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	"image": "mcr.microsoft.com/devcontainers/universal:2-linux",
+	"features": {
+		"ghcr.io/devcontainers/features/azure-cli:1": {},
+		"ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
+		"ghcr.io/rio/features/k9s:1": {}
+	}
 
-	// do not change these if you want Docker in Docker support
-	"runArgs": ["--init", "--privileged"],
-	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
-	"overrideCommand": false,
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
 
-	// some base images require a specific user name
-	"remoteUser": "vscode",
-
-	// Set container specific settings
-	"settings": {
-		"terminal.integrated.defaultProfile.linux": "zsh",
-		"files.trimTrailingWhitespace": true,
-		"files.trimFinalNewlines": true,
-		"files.insertFinalNewline": true
-	},
-
-	"hostRequirements": {
-		"cpus": 4
-	},
-
-	// forward ports for the app
-	"forwardPorts": [
-		30000,
-		31080,
-		32000
-	],
-
-	// add labels
-	"portsAttributes": {
-		"30000": { "label": "Prometheus" },
-		"31080": { "label": "Heartbeat" },
-		"32000": { "label": "Grafana" }
-	},
-
-	// Install extensions
-	"extensions": [
-		"ms-dotnettools.csharp",
-		"ms-azuretools.vscode-docker",
-		"ms-kubernetes-tools.vscode-kubernetes-tools",
-		"davidanson.vscode-markdownlint",
-		"gruntfuggly.todo-tree",
-		"mutantdino.resourcemonitor",
-		"humao.rest-client",
-		"timonwong.shellcheck"
-	],
-
-	//"waitFor": "postCreateCommand",
-
-	// Use 'onCreateCommand' to run commands as part of container creation.
-	"onCreateCommand": "/bin/bash -c .devcontainer/on-create.sh"
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "/bin/bash -c .devcontainer/post-create.sh",
+	// "postCreateCommand": "uname -a",
 
-	// Use 'postStartCommand' to run commands after the container starts.
-	// "postStartCommand": "/bin/bash -c .devcontainer/post-start.sh"
+	// Configure tool-specific properties.
+	// "customizations": {},
+
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
